--- a/src/pages/About.module.css
+++ b/src/pages/About.module.css
@@ -66,4 +66,10 @@
       min-height: 240px;
     }
   }
+  .img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Muy importante */
+    display: block;
+  }
   
